--- a/djangoproject/blog/templates/registration.html
+++ b/djangoproject/blog/templates/registration.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Войти</title>
+        <title>Регистрация</title>
     </head>
     <body>
         <h2 align="center">Регистрация</h2>
