edit login and models

--- a/djangoproject/blog/templates/index.html
+++ b/djangoproject/blog/templates/index.html
@@ -1,9 +1,12 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Блог</title>
-    </head>
-    <body>
-        <p>Текст для затравки</p>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Блог</title>
+</head>
+<body>
+<h1 align="center">Блог</h1>
+<p align="right">
+    <button><a href="{% url 'login' %}">Войти</a></button>
+    <a href="{% url 'registration' %}">Регистрация</a></p>
+</body>
 </html>
