--- a/djangoproject/blog/templates/registration.html
+++ b/djangoproject/blog/templates/registration.html
@@ -1,20 +1,20 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Регистрация</title>
-    </head>
-    <body>
-        <h2 align="center">Регистрация</h2>
-        <center>
-            <form method="POST">
-                {% csrf_token %}
-                <table>
-                    {{ form }}
-                </table>
-                <input type="submit" value="Загрегистрироваться">
-                <br>
-                <a href="{% url 'login' %}">Есть учётная запись? Войдите!</a>
-            </form>
-        </center>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Регистрация</title>
+</head>
+<body>
+<h2 align="center">Регистрация</h2>
+<center>
+    <form method="POST">
+        {% csrf_token %}
+        <table>
+            {{ reg_form }}
+        </table>
+        <input type="submit" value="Загрегистрироваться">
+        <br>
+        <a href="{% url 'login' %}">Есть учётная запись? Войдите!</a>
+    </form>
+</center>
+</body>
 </html>
