--- a/djangoproject/blog/templates/index.html
+++ b/djangoproject/blog/templates/index.html
@@ -6,15 +6,25 @@
 <body>
 <h1 align="center">Блог</h1>
 <p align="right">
-    <button><a href="{% url 'login' %}">Войти</a></button>
-    <a href="{% url 'registration' %}">Регистрация</a></p>
-
     {% if user.is_authenticated %}
+    <button><a href="{% url 'logout' %}">Выйти</a></button>
     <p align="center">Привет, {{ user.username }}</p>
         <center>
             <button><a href="{% url 'new_post' %}">Добавить пост</a></button>
-            <button><a href="{% url 'logout' %}">Выйти</a></button>
         </center>
+        <ul>
+            {% for p in posts %}
+            <li>
+                      <h2>{{p.title}}</h2>
+                      <p>{{p.text}}</p>
+                      {{ p.author }} - {{ p.creation_time }}
+                      <hr>
+            </li>
+            {% endfor %}
+   </ul>
+    {% else %}
+    <button><a href="{% url 'login' %}">Войти</a></button>
+    <a href="{% url 'registration' %}">Регистрация</a></p>
     {% endif %}
 </body>
 </html>
