--- a/djangoproject/blog/templates/index.html
+++ b/djangoproject/blog/templates/index.html
@@ -15,7 +15,7 @@
         <ul>
             {% for p in posts %}
             <li>
-                      <h2>{{p.title}}</h2>
+                      <h2><a href="{% url 'show_post' p.slug%}">{{p.title}}</a></h2>
                       <p>{{p.text}}</p>
                       {{ p.author }} - {{ p.creation_time }}
                       <hr>
