--- a/djangoproject/blog/templates/post.html
+++ b/djangoproject/blog/templates/post.html
@@ -16,6 +16,7 @@
             </table>
             <input type="submit" value="Отправить">
         </form>
+        <h3>Комментарии:</h3>
         <table>
             <tr>
                 {% for comment in comments %}
