--- a/djangoproject/blog/templates/login.html
+++ b/djangoproject/blog/templates/login.html
@@ -1,20 +1,22 @@
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Войти</title>
-</head>
-<body>
-<h2 align="center">Войти в блог</h2>
-<center>
-    <form method="POST">
-        {% csrf_token %}
-        <table>
-            {{ auth_form }}
-        </table>
-        <input type="submit" value="Войти">
-        <br>
-        <a href="{% url 'registration' %}">Нет учётной записи? Зарегистрируйтесь!</a>
-    </form>
-</center>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load django_bootstrap5 %}
+
+{% block head %}
+<title>Войти</title>
+{% endblock head %}
+
+{% block content %}
+    <h2 align="center" class="display-4">Войти в блог</h2>
+    <div class="container">
+        <div class="row my-5">
+            <div class="col-md-12">
+                <form method="post" class="form">
+                    {% csrf_token %}
+                    {% bootstrap_form auth_form %}
+                    <button type="submit" class="btn btn-primary">Войти</button>
+                    <a href="{% url 'registration' %}">Нет учётной записи? Зарегистрируйтесь!</a>
+                </form>
+            </div>
+        </div>
+    </div>
+{% endblock %}
