--- a/djangoproject/blog/templates/new_post.html
+++ b/djangoproject/blog/templates/new_post.html
@@ -1,19 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Добавить пост</title>
-</head>
-<body>
-    <h1 align="center">Добавить пост</h1>
-    <center>
-        <form method="post">
-            {% csrf_token %}
-            <table>
-                {{ post_form }}
-            </table>
-            <input type="submit" value="Создать пост">
-        </form>
-    </center>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load django_bootstrap5 %}
+
+{% block head %}
+<title>Добавить пост</title>
+{% endblock head %}
+
+{% block content %}
+<h1 align="center" class="display-5">Добавить пост</h1>
+    <div class="container">
+        <div class="row my-5">
+            <div class="col-md-12">
+                <form method="post" class="form">
+                    {% csrf_token %}
+                    {% bootstrap_form post_form %}
+                    <button type="submit" class="btn btn-primary">Создать пост</button>
+                </form>
+            </div>
+        </div>
+    </div>
+{% endblock %}
