--- a/djangoproject/blog/templates/post.html
+++ b/djangoproject/blog/templates/post.html
@@ -1,22 +1,28 @@
-<html>
-    <head>
-        <meta charset="utf=8">
-        <title>{{ title }}</title>
-    </head>
-    <body>
-        <h1>{{ title }}</h1>
-        Автор {{ author }}, {{ creation_time }}
-        <p>{{ text }}</p>
+{% extends 'base.html' %}
+{% load django_bootstrap5 %}
+
+{% block head %}
+<title>{{ title }}</title>
+{% endblock head %}
+
+{% block content %}
+<h1 class="display-6" style="position: static; margin-left: 20px;">{{ title }}</h1>
+
+<pre>
+    Автор: {{ author }}, {{ creation_time }}
+</pre>
+        <p style="border-style: solid; border-width: thin; border-color: rgb(13,110,253); position: static; margin-left: 20px; margin-right: 20px;">{{ text }}</p>
         <hr>
+        <div style="position: static; margin-left: 20px; margin-right: 20px;">
         <h3>Добавить комментарий:</h3>
-        <form method="post">
-            {% csrf_token %}
-            <table>
-                {{ comment_form }}
-            </table>
-            <input type="submit" value="Отправить">
-        </form>
-        <h3>Комментарии:</h3>
+
+                <form method="post" enctype="multipart/form-data" class="form">
+                    {% csrf_token %}
+                    {{ comment_form }}
+                    <br>
+                    <button type="submit" style="position: static; margin-top: 10px;" class="btn btn-primary">Отправить</button>
+                </form>
+            <h3>Комментарии:</h3>
         <table>
             <tr>
                 {% for comment in comments %}
@@ -27,5 +33,6 @@
                 {% endfor %}
             </tr>
         </table>
-    </body>
-</html>
+        </div>
+
+{% endblock %}
