--- a/djangoproject/blog/templates/profile.html
+++ b/djangoproject/blog/templates/profile.html
@@ -1,16 +1,26 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Профиль пользователя</title>
-    </head>
-    <body>
-        <form  enctype="multipart/form-data" method="POST">
-            {% csrf_token %}
-        <table>
-        {{ profile_form }}
-        {{ profile_photo }}
-        </table>
-        <input type="submit" value="Изменить">
-        </form>
-    </body>
-</html>
+{% extends 'base.html' %}
+{% load django_bootstrap5 %}
+
+{% block head %}
+<title>Профиль пользователя</title>
+{% endblock head %}
+
+{% block content %}
+<h1 class="display-6" style="margin-left: 20px;">Изменить данные профиля</h1>
+    <div class="container">
+        <div class="row my-5">
+            <div class="col-md-12">
+                <form method="post" enctype="multipart/form-data" class="form">
+                    {% csrf_token %}
+                    {% bootstrap_form profile_form %}
+                    {% bootstrap_form profile_photo %}
+                    <button type="submit" class="btn btn-primary">Изменить</button>
+                    <br>
+                    <br>
+                    <a href="{% url 'delete_profile' username=request.user %}" class="btn btn-danger">Удалить профиль</a>
+                    <p style="color: red"><strong>Внимание! Это действие нельзя отменить!</strong></p>
+                    </form>
+                </div>
+        </div>
+    </div>
+{% endblock %}
