--- a/djangoproject/blog/templates/base.html
+++ b/djangoproject/blog/templates/base.html
@@ -24,22 +24,9 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Главная</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Ссылка</a>
+                    <a class="nav-link" href="{% url 'profile' %}">Профиль</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Выпадающий список
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Действие</a></li>
-                      <li><a class="dropdown-item" href="#">Другое действие</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">Отключенная</a>
-                  </li>
                 </ul>
                   <a href="{% url 'logout' %}" class="btn btn-secondary" type="submit">Выйти</a>
               </div>
