--- a/djangoproject/blog/templates/post.html
+++ b/djangoproject/blog/templates/post.html
@@ -9,7 +9,7 @@
 <h1 class="display-6" style="position: static; margin-left: 20px;">{{ title }}</h1>
 
 <pre>
-    Автор: {{ author }}, {{ creation_time }}
+    Автор: {{ author.user }}, {{ creation_time }}
 </pre>
         <p style="border-style: solid; border-width: thin; border-color: rgb(13,110,253); position: static; margin-left: 20px; margin-right: 20px;">{{ text }}</p>
         <hr>
