add categories for posts, context processor for navbar categories and some fixes

--- a/djangoproject/blog/templates/post.html
+++ b/djangoproject/blog/templates/post.html
@@ -13,6 +13,7 @@
     {% if time_difference > 1 %}
     Изменено: {{ update_time }}
     {% endif %}
+    Категория: {{ category|lower }}
 </pre>
         <p style="border-style: solid; border-width: thin; border-color: rgb(13,110,253); position: static; margin-left: 20px; margin-right: 20px;">{{ text }}</p>
         {% if request.user == author.user %}
