--- a/djangoproject/blog/templates/base.html
+++ b/djangoproject/blog/templates/base.html
@@ -11,6 +11,8 @@
         {% bootstrap_messages %}
     </head>
     <body>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
       {% if user.is_authenticated %}
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -24,9 +26,16 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Главная</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'profile' %}">Профиль</a>
+                      <a class="nav-link" href="{% url 'profile' %}">Профиль</a>
                   </li>
                   <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Категории статей </a>
+                    <ul class="dropdown-menu">
+                        {% for c in categories %}
+                            <li><a class="dropdown-item" href="{% url 'posts_by_category' c.slug %}">{{ c.name }}</a></li>
+                        {% endfor %}
+                    </ul>
+                  </li>
                 </ul>
                   <a href="{% url 'logout' %}" class="btn btn-secondary" type="submit">Выйти</a>
               </div>
