--- a/djangoproject/blog/templates/posts_by_category.html
+++ b/djangoproject/blog/templates/posts_by_category.html
@@ -2,19 +2,13 @@
 {% load django_bootstrap5 %}
 
 {% block head %}
-<title>Блог</title>
+<title>Статьи категории {{ category }}</title>
 {% endblock head %}
 
 {% block content %}
-<h1 align="center" class="display-4">Блог</h1>
-<p align="right">
-    {% if user.is_authenticated %}
-    <p align="center">Привет, <a href="{% url 'profile' %}">{{ user.username }}</a> <img src="{{ acc.photo.url }}" width="50", height="50">
-    </p>
-        <center>
-            <a href="{% url 'new_post' %}" class="btn btn-primary">Добавить пост</a>
-        </center>
+<h1 align="center" class="display-4">Статьи категории {{ category }}</h1>
         <ul>
+            {{ posts.category }}
             {% for p in posts %}
             <li>
                       <h2><a href="{% url 'show_post' p.slug %}">{{ p.title }}</a></h2>
@@ -24,11 +18,6 @@
                       <hr>
             </li>
             {% endfor %}
-   </ul>
-    {% else %}
-    <a href="{% url 'login' %}" class="btn btn-primary">Войти</a>
-    <a href="{% url 'registration' %}">Регистрация</a>
-    </p>
-    {% endif %}
+        </ul>
 
 {% endblock %}
