--- a/djangoproject/blog/templates/base.html
+++ b/djangoproject/blog/templates/base.html
@@ -26,7 +26,7 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Главная</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="{% url 'profile' %}">Профиль</a>
+                      <a class="nav-link" href="{% url 'profile' acc.user.username %}">Профиль</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Категории статей </a>
