--- a/djangoproject/blog/templates/base.html
+++ b/djangoproject/blog/templates/base.html
@@ -36,6 +36,9 @@
                         {% endfor %}
                     </ul>
                   </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="{% url 'feedback' %}">Обратная связь</a>
+                  </li>
                 </ul>
                   <a href="{% url 'logout' %}" class="btn btn-secondary" type="submit">Выйти</a>
               </div>
