working celery send mail and some fixes

--- a/djangoproject/blog/templates/feedback_success.html
+++ b/djangoproject/blog/templates/feedback_success.html
@@ -10,9 +10,8 @@
     <div class="container">
         <div class="row my-5">
             <div class="col-md-12">
-                <p align="center">Сообщение успешно отправлено. Переадресация на главную страницу произойдёт автоматически через 5 секунд<br>
-                Если переадресация не произошла - нажмите на <a href="{% url 'home' %}">ссылку</a></p>
-
+                <p align="center">Сообщение успешно отправлено. <a href="{% url 'feedback' %}">Создайте новое обращение</a>
+                    или перейдите на <a href="{% url 'home' %}">главную страницу</a></p>
             </div>
         </div>
     </div>
